--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   </head>
 
   <body>
-    <!-- ======= Mobile nav toggle button ======= -->
+    <!-- ======= Mobile navigation toggle button ======= -->
     <!-- <button type="button" class="mobile-nav-toggle d-xl-none"><i class="bi bi-list mobile-nav-toggle"></i></button> -->
     <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
     <!-- ======= Header ======= -->
